<resources>
    <string name="app_name">Coffee Ordering App</string>
    <string name="quantity">Quantity</string>
    <string name="numberOfQuantity">0</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="calculatePrice">$0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="thank_you_message"></string>
</resources>