<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="16sp"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/plus"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:onClick="increment"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfQuantity"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/quantity_text_view"
            />
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/minus"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:onClick="decrement"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculatePrice"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/price_text_view"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:onClick="submitOrder"/>

    <TextView
        android:id="@+id/thank_you_message"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="80dp"
        android:text="@string/thank_you_message"
        android:textColor="@color/black"
        android:textSize="16sp" />


</LinearLayout>

